# 3d_viewer

./: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
src/: App.vue  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: main.rs  utils.rs
src/components/: Frame.vue  Head.vue  Virtual.vue
